--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ logging.level.org.springframework=ERROR
 spring.datasource.url=jdbc:mysql://localhost:3306/todo?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+
+auth:
+expiration: 604800
